# libtga

./: CMakeLists.txt
docs/tw/: index.html
include/: libtga.hpp
src/: tga.cpp
